--- a/opera.html
+++ b/opera.html
@@ -6,41 +6,41 @@
             <h1>Gomathigade_Productions LTD</h1>
             <h4>The Yeomen Act</h4>
             <h6>ACT I</h6>
-            <p style="color:green">[Scene.— Tower Green]  When maiden loves, she sits and sighs </p>
-            <p style="color:red"> [Enter WILFRED] Mistress Meryll! </p>
-            <p><b>PHOEBE</b>  [looking up] Eh! Oh! it's you, is it? You may go 
-                               away,if you like. Because I don't want you, you know.
+            <p style="color:green"><p>[Scene.— Tower Green]</p> When maiden loves, she sits and sighs </p>
+            <p style="color:red"> <p>[Enter WILFRED]</p> Mistress Meryll! </p>
+            <p><h5>PHOEBE</h5>  <p>[looking up]</p> <P>Eh! Oh! it's you, is it? You may go 
+                               away,if you like. Because I don't want you, you know.</p>
                                <br>
-                <b>WILFRED</b>  Haven't you anything to say to me?
+                <h5>WILFRED</h5>  <p>Haven't you anything to say to me?</p>
                                 <br>
-                <b>PHOEBE</b>  Oh yes! Are the birds all caged? The wild beasts all
+                <h5>PHOEBE</h5> <p>Oh yes! Are the birds all caged? The wild beasts all
                                littered down? All the locks, chains, bolts, and bars
                                in good order? Is the Little Ease sufficiently
                                comfortable? The racks, pincers, and thumbscrews all
-                               ready for work? Ugh! you brute!          
+                               ready for work? Ugh! you brute!</p>         
                                <br>
-                <b>WILFRED</b> These allusions to my professional duties are in
+                <h5>WILFRED</h5> <p>These allusions to my professional duties are in
                                doubtful taste. I didn't become a head-jailer because
                                I like head-jailing. I didn't become an assistant-
                                tormentor because I like assistant-tormenting. We
-                               can't all be sorcerers, you know. [PHOEBE is annoyed]
-                               Ah! you brought that upon yourself.  
+                               can't all be sorcerers, you know. <p>[PHOEBE is annoyed]</p>
+                               Ah! you brought that upon yourself.</p>  
                                <br>
-                <b> PHOEBE</b> Colonel Fairfax is not a sorcerer. He's a man of
-                               science and an alchemist. 
+                <h5> PHOEBE</h5> <p>Colonel Fairfax is not a sorcerer. He's a man of
+                               science and an alchemist.</p>
                                <br>
-                <b>WILFRED</b>  Well, whatever he is, he won't be one for long, for
+                <h5>WILFRED</h5>  <p>Well, whatever he is, he won't be one for long, for
                                 he's to be beheaded to-day for dealings with the
                                 devil. His master nearly had him last night, when the
-                                fire broke out in the Beauchamp [pronounced Bee'cham]
-                                Tower.
+                                fire broke out in the Beauchamp <p>[pronounced Bee'cham]</p>
+                                Tower.</p>
                                 <br>
-                 <b>PHOEBE</b> Oh! how I wish he had escaped in the confusion! But
+                 <h5>PHOEBE</h5> <p> how I wish he had escaped in the confusion! But
                                take care; there's still time for a reply to his
-                               petition for mercy.      
+                               petition for mercy.</p>    
                                <br>
-                <b>WILFRED</b> Ah! I'm content to chance that. This evening at half-
-                               past seven— ah! [Gesture of chopping off a head.]                                                 
+                <h5>WILFRED</h5> <p>Ah! I'm content to chance that. This evening at half-
+                               past seven— ah! <p>[Gesture of chopping off a head.]</p> </p>                                               
 
 
         </body>
