--- a/opera.html
+++ b/opera.html
@@ -65,6 +65,27 @@
     <p class="direction">[Gesture of chopping off a head.]</p>
     </p>
 
+    <table>
+        <thead>
+             <tr>
+                  <th>Character</th>
+                  <th>Singer</th>
+                  <th>Offer</th>
+             </tr>
+        </thead>
+        <tbody>
+             <tr>
+                  <td>PHOEBE</td>
+                  <td>Avanthika</td>
+                  <td>15 Million Dollars</td>
+             </tr>
+             <tr>
+                <td>WILFRED</td>
+                <td>shashank</td>
+                <td>15 Million Dollars</td>
+           </tr>
+
+
 
 </body>
 
