--- a/opera.html
+++ b/opera.html
@@ -84,9 +84,8 @@
                 <td>shashank</td>
                 <td>15 Million Dollars</td>
            </tr>
-
-
-
+           
+    </table>
 </body>
-
+             <a href="/opera2.html">And show goes on</a>  
 </html>
