added links on both slides

--- a/opera2.html
+++ b/opera2.html
@@ -11,8 +11,7 @@
     <body>
         
             
-            <p style="color:green">
-            <p class="direction">[Scene.— Tower Green]</p> When maiden loves, she sits and sighs </p>
+            <p style="color:green"> </p>
             <p style="color:red"> </p>
 
             <h5 class="PHOEBE">PHOEBE</h5>
