--- a/opera.html
+++ b/opera.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Gomathigade_Productions LTD</h1>
     <h4>The Yeomen Act</h4>
-    <h6>ACT I</h6>
+    <h6>ACT 2</h6>
     <p style="color:green">
     <p class="direction">[Scene.— Tower Green]</p> When maiden loves, she sits and sighs </p>
     <p style="color:red">
