--- a/opera2.html
+++ b/opera2.html
@@ -6,31 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>And the show goes on</title>
     <link rel="stylesheet" href="gs.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
 
     <body>
         
-        <h1>Gomathigade_Productions LTD</h1>
+        <h1><i class="material-symbols-outlined" style="font-size: 20px;">star</i>Gomathigade_Productions LTD</h1>
         <h4>The Yeomen Act</h4>
         <h6>ACT 2</h6>
             <p style="color:green"> </p>
             <p style="color:red"> </p>
 
-            <h5 class="PHOEBE">PHOEBE</h5>
+            <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>PHOEBE</h5>
             <p> You're a cruel monster to speak so unfeelingly of the
                 death of a young and handsome soldier.</p>
                 <br>
-                <h5 class="WILFRED">WILFRED</h5>    
+                <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5>    
                 <p>Young and handsome! How do you know he's young and
                     handsome?</p>
                     <br>
-                <h5 class="PHOEBE">PHOEBE</h5> 
+                <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>PHOEBE</h5> 
                 <p> Because I've seen him every day for weeks past taking
                     his exercise on the Beauchamp <p class="direction">[pronounced Bee'cham]</p>
                     Tower.</p>
                     <br>
-                    <h5 class="WILFRED">WILFRED</h5> 
+                    <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5> 
                     <p>Curse him!</p> 
-             <a href="opera.html">opera.html</a>
+                    <ul>
+                        <li class="nav-item-prev"><a href="opera.html">previous page</a></li>
+                        <li class="nav-item-next"><a href="opera2.html">next page</a></li>
+                   </ul>
     </body>
 </html>
