--- a/opera.html
+++ b/opera.html
@@ -7,33 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment_04</title>
     <link rel="stylesheet" href="gs.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Gomathigade_Productions LTD</h1>
+    <h1><i class="material-symbols-outlined" style="font-size: 20px;">star</i>Gomathigade_Productions LTD</h1>
     <h4>The Yeomen Act</h4>
+    <img src="cover_picture.png" alt="cover picture">
     <h6>ACT 2</h6>
     <p style="color:green">
     <p class="direction">[Scene.— Tower Green]</p> When maiden loves, she sits and sighs </p>
     <p style="color:red">
     <p class="direction">[Enter WILFRED]</p> Mistress Meryll! </p>
     <p>
-    <h5 class="PHOEBE">PHOEBE</h5>
+    <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>PHOEBE</h5>
     <p class="direction">[looking up]</p>
     <P>Eh! Oh! it's you, is it? You may go
         away,if you like. Because I don't want you, you know.</p>
     <br>
-    <h5 class="WILFRED">WILFRED</h5>
+    <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5>
     <p>Haven't you anything to say to me?</p>
     <br>
-    <h5 class="PHOEBE">PHOEBE</h5>
+    <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>PHOEBE</h5>
     <p>Oh yes! Are the birds all caged? The wild beasts all
         littered down? All the locks, chains, bolts, and bars
         in good order? Is the Little Ease sufficiently
         comfortable? The racks, pincers, and thumbscrews all
         ready for work? Ugh! you brute!</p>
     <br>
-    <h5 class="WILFRED">WILFRED</h5>
+    <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5>
     <p>These allusions to my professional duties are in
         doubtful taste. I didn't become a head-jailer because
         I like head-jailing. I didn't become an assistant-
@@ -42,11 +44,11 @@
     <p class="direction">[PHOEBE is annoyed]</p>
     Ah! you brought that upon yourself.</p>
     <br>
-    <h5 class="PHOEBE"> PHOEBE</h5>
+    <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i> PHOEBE</h5>
     <p>Colonel Fairfax is not a sorcerer. He's a man of
         science and an alchemist.</p>
     <br>
-    <h5 class="WILFRED">WILFRED</h5>
+    <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5>
     <p>Well, whatever he is, he won't be one for long, for
         he's to be beheaded to-day for dealings with the
         devil. His master nearly had him last night, when the
@@ -54,12 +56,12 @@
     <p class="direction">[pronounced Bee'cham]</p>
     Tower.</p>
     <br>
-    <h5 class="PHOEBE">PHOEBE</h5>
+    <h5 class="PHOEBE"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>PHOEBE</h5>
     <p> how I wish he had escaped in the confusion! But
         take care; there's still time for a reply to his
         petition for mercy.</p>
     <br>
-    <h5 class="WILFRED">WILFRED</h5>
+    <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5>
     <p>Ah! I'm content to chance that. This evening at half-
         past seven— ah!
     <p class="direction">[Gesture of chopping off a head.]</p>
@@ -86,6 +88,10 @@
            </tr>
            
     </table>
+
+<ul>
+    <li class="nav-item-prev"><a href="opera.html">previous page</a></li>
+    <li class="nav-item-next"><a href="opera2.html">next page</a></li>
+</ul> 
 </body>
-             <a href="/opera2.html">And show goes on</a>  
 </html>
