--- a/opera2.html
+++ b/opera2.html
@@ -32,6 +32,28 @@
                     <br>
                     <h5 class="WILFRED"><i class="material-symbols-outlined" style="font-size: 20px;">Person</i>WILFRED</h5> 
                     <p>Curse him!</p> 
+
+                    <table>
+                        <thead>
+                             <tr>
+                                  <th>Character</th>
+                                  <th>Singer</th>
+                                  <th>Offer</th>
+                             </tr>
+                        </thead>
+                        <tbody>
+                             <tr>
+                                  <td>PHOEBE</td>
+                                  <td>Avanthika</td>
+                                  <td>15 Million Dollars</td>
+                             </tr>
+                             <tr>
+                                <td>WILFRED</td>
+                                <td>shashank</td>
+                                <td>15 Million Dollars</td>
+                           </tr>
+                           
+                    </table>
                     <ul>
                         <li class="nav-item-prev"><a href="opera.html">previous page</a></li>
                         <li class="nav-item-next"><a href="opera2.html">next page</a></li>
